--- a/html/index.html
+++ b/html/index.html
@@ -19,10 +19,10 @@
         </header>
         <nav>
             <ul id="menu" class="menu">
-                <li><a href="#">Historia</a></li>
+                <li id="id"><a href="#">Historia</a></li>
                 <li><a href="#">Productos</a></li>
                 <li><a href="#">Servicios</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="/html/contacto.html">Contacto</a></li>
 
             </ul>
         </nav>
@@ -43,9 +43,9 @@
 
     </div>
 
-    <script src="../js/script.js "></script>
-    <script src="../js/galeriaSetIntervaljs"></script>
-    <script src=></script>
+    <script src="/js/script.js "></script>
+    <script src="/js/galeriaSetIntervaljs"></script>
+    <script src="/js/enlaces.js"></script>
     <script src="https://kit.fontawesome.com/45730bc152.js " crossorigin="anonymous "></script>
 </body>
 
