--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,8 @@
             <i id="right_Arrow" class="fa-solid fa-angle-right "></i>
             -->
         </div>
-
+        <div class="tarjetas">
+        </div>
         <footer>
             <div class="footer "></div>
         </footer>
