--- a/html/index.html
+++ b/html/index.html
@@ -35,6 +35,7 @@
             -->
         </div>
         <div class="tarjetas">
+            <p>aqui vamos a incluir tarejetas</p>
         </div>
         <footer>
             <div class="footer "></div>
