--- a/html/contacto.html
+++ b/html/contacto.html
@@ -45,7 +45,7 @@
                 <label for="labelasunto">Asunto</label>
                 <input type="text" name="asunto">
                 <label for="labelMensaje">Tu mensaje *</label>
-                <textarea name="Mensaje" id="" cols="30" rows="10"></textarea>
+                <textarea name="Mensaje" id="" cols="30" rows="10" required></textarea>
 
                 <aside>
 
@@ -58,8 +58,9 @@
                         esta cláusula
                     </p>
                 </aside>
+                <button type="submit " id="enviar" class="enviar" disabled>Enivar Formulario</button>
             </form>
-            <button type="submit " id="enviar" class="enviar" disabled ">Enivar Formulario</button>
+
 
         </div>
 
