--- a/html/index.html
+++ b/html/index.html
@@ -35,10 +35,14 @@
             -->
         </div>
         <div class="tarjetas">
-            <p>aqui vamos a incluir tarejetas</p>
+            <div>
+                <img src="/imagenes/Card_limpieza.jpg" class="cardsImg">
+            </div>
+            <div><img src="/imagenes/cardLavanderia.jpg" class="cardsImg"></div>
+            <div><img src="/imagenes/cardCelulosa.jpg" class="cardsImg"></div>
         </div>
         <footer>
-            <div class="footer "></div>
+            <div class=" footer "></div>
         </footer>
 
 
@@ -46,9 +50,9 @@
     </div>
 
     <script src="/js/script.js "></script>
-    <script src="/js/galeriaSetIntervaljs"></script>
-    <script src="/js/enlaces.js"></script>
+    <script src="/js/galeriaSetIntervaljs "></script>
+    <script src="/js/enlaces.js "></script>
     <script src="https://kit.fontawesome.com/45730bc152.js " crossorigin="anonymous "></script>
 </body>
 
-</html>
+</htm/la)
