--- a/html/index.html
+++ b/html/index.html
@@ -42,7 +42,10 @@
             <div><img src="/imagenes/cardCelulosa.jpg" class="cardsImg"></div>
         </div>
         <footer>
-            <div class=" footer "></div>
+            <div class="footer">
+
+
+            </div>
         </footer>
 
 
