--- a/html/index.html
+++ b/html/index.html
@@ -42,10 +42,16 @@
             <div><img src="/imagenes/cardCelulosa.jpg" class="cardsImg"></div>
         </div>
         <footer>
-            <div class="footer">
 
-
+            <div class="datos">
+                <p>Dionisio Garcia, SL</p>
+                <p>Calle del Ajo Porro, 9</p>
+                <p>28069 Madrid</p>
+                <p>913 456 334</p>
+                <a href="mailto:dionisoGarcia@mimail.com">dionisoGarcia@mimail.com</a>
             </div>
+
+
         </footer>
 
 
