--- a/html/index.html
+++ b/html/index.html
@@ -43,6 +43,15 @@
         </div>
         <footer>
 
+                <div class="datos">
+                    <p>Dionisio Garcia, SL</p>
+                    <p>Calle AC/DC 69</p>
+                    <p>28914 Leganes</p>
+                    <p>Madrid</p>
+                    <p>913 456 334</p>
+                    <a href="mailto:dionisoGarcia@mimail.com">dionisoGarcia@mimail.com</a>
+                </div>
+        
            
 
         </footer>
@@ -57,4 +66,4 @@
     <script src="https://kit.fontawesome.com/45730bc152.js " crossorigin="anonymous "></script>
 </body>
 
-</htm/la)
+</html
