--- a/html/index.html
+++ b/html/index.html
@@ -20,9 +20,10 @@
         </header>
         <nav>
             <ul id="menu" class="menu">
-                <li id="id"><a href="#">Historia</a></li>
+                <li id="id"><a href="index.html">Home</a></li>
+                <li id="id"><a href="historia.html">Historia</a></li>
                 <li><a href="#">Productos</a></li>
-                <li><a href="#">Servicios</a></li>
+                <li><a href="/html/consejos.html">Consejos</a></li>
                 <li><a href="/html/contacto.html">Contacto</a></li>
 
             </ul>
@@ -36,11 +37,49 @@
             -->
         </div>
         <div class="tarjetas">
-            <div>
+
+            <div id="tarjetaLimpieza">
                 <img src="/imagenes/Card_limpieza.jpg" class="cardsImg">
+                <div class="productos">
+                    <h2>Limpieza industrial</h2>
+                    <ul>
+                        <li>Limpiasuelos</li>
+                        <li>Desengrasantes</li>
+                        <li>Desinfectantes</li>
+                        <li>utiles</li>
+                        <li>...</li>
+                    </ul>
+
+                </div>
             </div>
-            <div><img src="/imagenes/cardLavanderia.jpg" class="cardsImg"></div>
-            <div><img src="/imagenes/cardCelulosa.jpg" class="cardsImg"></div>
+
+            <div id="tarjetaLavanderia">
+                <img src="/imagenes/cardLavanderia.jpg" class="cardsImg">
+
+                <h2>Lavandería</h2>
+                <ul>
+                    <li>Detergentes</li>
+                    <li>Suavizantes</li>
+                    <li>Desmanchantes</li>
+                    <li>Bombas dosifiación</li>
+                    <li>...</li>
+                </ul>
+
+            </div>
+            <div id="tarjetaCelulosa">
+                <img src="/imagenes/cardCelulosa.jpg" class="cardsImg">
+                <div class="productos">
+                    <h2>Celulosa</h2>
+                    <ul>
+                        <li>Papel higiénico</li>
+                        <li>Higiénico Industrial</li>
+                        <li>Rollo Chemille</li>
+                        <li>Servilletas ZZ</li>
+                        <li>...</li>
+                    </ul>
+
+                </div>
+            </div>
         </div>
         <footer>
 
