--- a/html/contacto.html
+++ b/html/contacto.html
@@ -19,9 +19,10 @@
         </header>
         <nav>
             <ul id="menu" class="menu">
-                <li id="id"><a href="#">Historia</a></li>
+                <li id="id"><a href="/html/index.html">Home</a></li>
+                <li id="id"><a href="historia.html">Historia</a></li>
                 <li><a href="#">Productos</a></li>
-                <li><a href="#">Servicios</a></li>
+                <li><a href="consejos.html">Consejos</a></li>
                 <li><a href="#">Contacto</a></li>
 
             </ul>
