--- a/html/consejos.html
+++ b/html/consejos.html
@@ -32,15 +32,17 @@
         <div class="container">
 
             <div class="videos">
-                <div><iframe src="https://www.youtube.com/watch?v=NvAIFbH80_E" frameborder="0"></iframe></div>
-                <div>2</div>
-                <div>3</div>
-                <div>4</div>
-                <div>5</div>
-                <div>6</div>
-                <div>7</div>
-                <div>8</div>
-                <div>9</div>
+                <div>
+                    <video src="/videos/01.-Cómo pintar sobre plástico.mp4" controls poster="/imagenes/poster_01.png"></video>
+                </div>
+                <div> <video src="/videos/02.-Cómo restaurar un mueble HD.mp4" controls poster="/imagenes/poster-02.png"></video></div>
+                <div> <video src="/videos/03.-manchasPared.mp4" controls poster="/imagenes/poster_03.png"></video></div>
+                <div> <video src="/videos/04.-Cómo pintar con chalk paint o pintura a la tiza.mp4" controls poster="/imagenes/poster_04.jpg"></video></div>
+                <div> <video src="/videos/05.-Cómo combatir la humedad por condensación.mp4" controls poster="/imagenes/poster_05.jpg"></video></div>
+                <div> <video src="/videos/06Cómo pintar sobre plástico II.mp4" controls poster="/imagenes/poster_06.jpg"></video></div>
+                <div> <video src="/videos/07.-Cómo reparar goteras y humedades en el techo HD.mp4" controls poster="/imagenes/poster_07.jpg"></video></div>
+                <div> <video src="/videos/08.-Preparar las paredes para pintar HD.mp4" controls poster="/imagenes/poster_08.jpg"></video></div>
+                <div> <video src="/videos/09.-Cómo Quitar Sangre De Las Sábanas.mp4" controls poster="/imagenes/poster_09.png"></video></div>
             </div>
 
 
