--- a/html/consejos.html
+++ b/html/consejos.html
@@ -34,16 +34,41 @@
             <div class="videos">
                 <div>
                     <video src="/videos/01.-Cómo pintar sobre plástico.mp4" controls poster="/imagenes/poster_01.png"></video>
+                    <p>Pintura sobre plásticos</p>
                 </div>
-                <div> <video src="/videos/02.-Cómo restaurar un mueble HD.mp4" controls poster="/imagenes/poster-02.png"></video></div>
-                <div> <video src="/videos/03.-manchasPared.mp4" controls poster="/imagenes/poster_03.png"></video></div>
-                <div> <video src="/videos/04.-Cómo pintar con chalk paint o pintura a la tiza.mp4" controls poster="/imagenes/poster_04.jpg"></video></div>
-                <div> <video src="/videos/05.-Cómo combatir la humedad por condensación.mp4" controls poster="/imagenes/poster_05.jpg"></video></div>
-                <div> <video src="/videos/06Cómo pintar sobre plástico II.mp4" controls poster="/imagenes/poster_06.jpg"></video></div>
-                <div> <video src="/videos/07.-Cómo reparar goteras y humedades en el techo HD.mp4" controls poster="/imagenes/poster_07.jpg"></video></div>
-                <div> <video src="/videos/08.-Preparar las paredes para pintar HD.mp4" controls poster="/imagenes/poster_08.jpg"></video></div>
-                <div> <video src="/videos/09.-Cómo Quitar Sangre De Las Sábanas.mp4" controls poster="/imagenes/poster_09.png"></video></div>
+                <div> <video src="/videos/02.-Cómo restaurar un mueble HD.mp4" controls poster="/imagenes/poster-02.png"></video>
+                    <p>Renovar muebles viejos</p>
+                </div>
+                <div> <video src="/videos/03.-manchasPared.mp4" controls poster="/imagenes/poster_03.png"></video>
+                    <p>Eliminar manchas pared</p>
+                </div>
+                <div> <video src="/videos/04.-Cómo pintar con chalk paint o pintura a la tiza.mp4" controls poster="/imagenes/poster_04.jpg"></video>
+                    <p>Chalk paint "Pintura a la tiza"</p>
+                </div>
+                <div> <video src="/videos/05.-Cómo combatir la humedad por condensación.mp4" controls poster="/imagenes/poster_05.jpg"></video>
+                    <p>Humedad por condensación</p>
+                </div>
+                <div> <video src="/videos/06Cómo pintar sobre plástico II.mp4" controls poster="/imagenes/poster_06.jpg"></video>
+                    <p>Pintura sobre plásticos II</p>
+                </div>
+                <div> <video src="/videos/07.-Cómo reparar goteras y humedades en el techo HD.mp4" controls poster="/imagenes/poster_07.jpg"></video>
+                    <p>Reparar humedades techo</p>
+                </div>
+                <div> <video src="/videos/08.-Preparar las paredes para pintar HD.mp4" controls poster="/imagenes/poster_08.jpg"></video>
+                    <p>Preparación de paredess</p>
+                </div>
+                <div> <video src="/videos/09.-Cómo Quitar Sangre De Las Sábanas.mp4" controls poster="/imagenes/poster_09.png"></video>
+                    <p>Eliminar manchas sangre</p>
+                </div>
+                <div> <video src="/videos/10.-Dosivicacion Automatica.mp4" controls poster="/imagenes/poster_10.png"></video>
+                    <p>Sistema dosficación lavado automático</p>
+                </div>
+                <div> <video src="/videos/11-Dispack.mp4" controls poster="/imagenes/poster_11.png"></video>
+                    <p>Dispack concentrados</p>
+                </div>
             </div>
+
+        </div>
 
 
 
@@ -54,15 +79,22 @@
 
 
         <footer>
-            <div class="footer "></div>
-        </footer>
+            <<div class="datos">
+                <p>Dionisio Garcia, SL</p>
+                <p>Calle AC/DC 69</p>
+                <p>28914 Leganes</p>
+                <p>Madrid</p>
+                <p>913 456 334</p>
+                <a href="mailto:dionisoGarcia@mimail.com">dionisoGarcia@mimail.com</a>
+    </div>
+    </footer>
 
 
 
-        </div>
+    </div>
 
-        <script src="/js/script.js "></script>
-        <script src="/js/enlaces.js "></script>
+    <script src="/js/script.js "></script>
+    <script src="/js/enlaces.js "></script>
 
 </body>
 
