--- a/html/contacto.html
+++ b/html/contacto.html
@@ -71,7 +71,14 @@
 
         </div>
         <footer>
-            <div class="footer "></div>
+            <div class="datos">
+                <p>Dionisio Garcia, SL</p>
+                <p>Calle AC/DC 69</p>
+                <p>28914 Leganes</p>
+                <p>Madrid</p>
+                <p>913 456 334</p>
+                <a href="mailto:dionisoGarcia@mimail.com">dionisoGarcia@mimail.com</a>
+            </div>
         </footer>
 
 
