--- a/html/index.html
+++ b/html/index.html
@@ -38,19 +38,19 @@
         </div>
         <div class="tarjetas">
 
-            <div id="tarjetaLimpieza">
-                <img src="/imagenes/Card_limpieza.jpg" class="cardsImg">
-                <div class="productos">
-                    <h2>Limpieza industrial</h2>
-                    <ul>
-                        <li>Limpiasuelos</li>
-                        <li>Desengrasantes</li>
-                        <li>Desinfectantes</li>
-                        <li>utiles</li>
-                        <li>...</li>
-                    </ul>
+            <div id="tarjetaPintura">
+                <img src="/imagenes/card_Pintura.jpg" class="cardsImg">
 
-                </div>
+                <h2>Pinturas</h2>
+                <ul>
+                    <li>Pinturas plásticas</li>
+                    <li>Esmaltes</li>
+                    <li>Barnices</li>
+                    <li>Sprays</li>
+                    <li>...</li>
+                </ul>
+
+
             </div>
 
             <div id="tarjetaLavanderia">
@@ -66,19 +66,19 @@
                 </ul>
 
             </div>
-            <div id="tarjetaCelulosa">
-                <img src="/imagenes/cardCelulosa.jpg" class="cardsImg">
-                <div class="productos">
-                    <h2>Celulosa</h2>
-                    <ul>
-                        <li>Papel higiénico</li>
-                        <li>Higiénico Industrial</li>
-                        <li>Rollo Chemille</li>
-                        <li>Servilletas ZZ</li>
-                        <li>...</li>
-                    </ul>
+            <div id="tarjetaLimpieza">
+                <img src="/imagenes/Card_limpieza.jpg" class="cardsImg">
 
-                </div>
+                <h2>Limpieza industrial</h2>
+                <ul>
+                    <li>Limpiasuelos</li>
+                    <li>Desengrasantes</li>
+                    <li>Desinfectantes</li>
+                    <li>utiles</li>
+                    <li>...</li>
+                </ul>
+
+
             </div>
         </div>
         <footer>
