--- a/html/lavanderia.html
+++ b/html/lavanderia.html
@@ -30,7 +30,15 @@
 
 
 
-        <h1>LAVANDERIA</h1>
+        <div class="productos">
+            <h1>LAVANDERIA</h1>
+            <p>Aqui en un futuro recataremos aritculos de la bd</p>
+
+
+        </div>
+
+
+        <?php include '/includes/pureba.php';?>
 
 
         <footer>
