--- a/html/limpieza.html
+++ b/html/limpieza.html
@@ -29,7 +29,12 @@
 
 
 
-        <h12>Limpieza</h12>
+        <div class="productos">
+            <h1>LIMPIEZA</h1>
+            <p>Aqui en un futuro recataremos aritculos de la bd</p>
+
+
+        </div>
 
 
         <footer>
