--- a/html/index.html
+++ b/html/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -16,10 +16,12 @@
 <body>
     <div class="contenedor">
         <header>
+            <p>fecha actual</p>
 
+            <div class="logo">
+                <img src="/imagenes/logo.png " alt="foto logo">
+            </div>
 
-            <div class="menu">
-                <img class="portada_logo" src="/imagenes/logo.png " alt=" ">
         </header>
         <nav>
             <ul id="menu" class="menu">
@@ -31,78 +33,78 @@
 
             </ul>
         </nav>
-        </div>
-        <div class="galeria">
+    </div>
+    <div class="galeria">
 
-            <img id="fotoPortada" src="/imagenes/images-1.jpg" class="portada_foto " alt="drogueria Dionsio garcia " title="dionisio garcia ">
-            <!-- <i id="left_Arrow" class=" fa-solid fa-angle-left "></i>
+        <img id="fotoPortada" src="/imagenes/images-1.jpg" class="portada_foto " alt="drogueria Dionsio garcia " title="dionisio garcia ">
+        <!-- <i id="left_Arrow" class=" fa-solid fa-angle-left "></i>
             <i id="right_Arrow" class="fa-solid fa-angle-right "></i>
             -->
+    </div>
+    <div class="tarjetas">
+
+        <div id="tarjetaPintura">
+            <img src="/imagenes/card_Pintura.jpg" class="cardsImg">
+
+            <h2>Pinturas</h2>
+            <ul>
+                <li>Pinturas plásticas</li>
+                <li>Esmaltes</li>
+                <li>Barnices</li>
+                <li>Sprays</li>
+                <li>...</li>
+            </ul>
+
+
         </div>
-        <div class="tarjetas">
 
-            <div id="tarjetaPintura">
-                <img src="/imagenes/card_Pintura.jpg" class="cardsImg">
+        <div id="tarjetaLavanderia">
+            <img src="/imagenes/cardLavanderia.jpg" class="cardsImg">
 
-                <h2>Pinturas</h2>
-                <ul>
-                    <li>Pinturas plásticas</li>
-                    <li>Esmaltes</li>
-                    <li>Barnices</li>
-                    <li>Sprays</li>
-                    <li>...</li>
-                </ul>
+            <h2>Lavandería</h2>
+            <ul>
+                <li>Detergentes</li>
+                <li>Suavizantes</li>
+                <li>Desmanchantes</li>
+                <li>Bombas dosifiación</li>
+                <li>...</li>
+            </ul>
 
-
-            </div>
-
-            <div id="tarjetaLavanderia">
-                <img src="/imagenes/cardLavanderia.jpg" class="cardsImg">
-
-                <h2>Lavandería</h2>
-                <ul>
-                    <li>Detergentes</li>
-                    <li>Suavizantes</li>
-                    <li>Desmanchantes</li>
-                    <li>Bombas dosifiación</li>
-                    <li>...</li>
-                </ul>
-
-            </div>
-            <div id="tarjetaLimpieza">
-                <img src="/imagenes/Card_limpieza.jpg" class="cardsImg">
-
-                <h2>Limpieza industrial</h2>
-                <ul>
-                    <li>Limpiasuelos</li>
-                    <li>Desengrasantes</li>
-                    <li>Desinfectantes</li>
-                    <li>utiles</li>
-                    <li>...</li>
-                </ul>
-
-
-            </div>
         </div>
-        <footer>
+        <div id="tarjetaLimpieza">
+            <img src="/imagenes/Card_limpieza.jpg" class="cardsImg">
 
-            <div class="footer--flex_container">
-                <div class="datos">
-                    <p>Dionisio Garcia, SL</p>
-                    <p>Calle AC/DC 69</p>
-                    <p>28914 Leganes</p>
-                    <p>Madrid</p>
-                    <p>913 666 069</p>
-                    <a href="mailto:dionisoGarcia@mimail.com">dionisoGarcia@mimail.com</a>
-                </div>
+            <h2>Limpieza industrial</h2>
+            <ul>
+                <li>Limpiasuelos</li>
+                <li>Desengrasantes</li>
+                <li>Desinfectantes</li>
+                <li>utiles</li>
+                <li>...</li>
+            </ul>
 
-                <div class="social">
-                    <p id="comparte">Comparte:</p>
 
-                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://dionisiogarcia.com" target="_blank"><i class="fa-brands fa-square-facebook fa-xl" ></i></a>
-                    <a href="https://twitter.com/intent/tweet?text=[text]&url=[url]&hashtags=[hashtag]" target="_blank"><i class="fa-brands fa-square-twitter fa-xl""></i></a>
-                    <a href="https://api.whatsapp.com/send?text=escola%20inform%C3%A1tica%20i%20disseny%20https://dinisiogarcia.com" target="_blank"><i class="fa-brands fa-square-whatsapp fa-xl""></i></a>
-                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=dionisiogarcia.com target=" _blank "><i class="fa-brands fa-linkedin fa-xl "></i></a>
+        </div>
+    </div>
+    <footer>
+
+        <div class="footer--flex_container">
+            <div class="datos">
+                <p>Dionisio Garcia, SL</p>
+                <p>Calle AC/DC 69</p>
+                <p>28914 Leganes</p>
+                <p>Madrid</p>
+                <p>913 666 069</p>
+                <a href="mailto:dionisoGarcia@mimail.com">dionisoGarcia@mimail.com</a>
+            </div>
+
+            <div class="social">
+                <p id="comparte">Comparte:</p>
+
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://dionisiogarcia.com" target="_blank"><i class="fa-brands fa-square-facebook fa-xl" ></i></a>
+                <a href="https://twitter.com/intent/tweet?text=[text]&url=[url]&hashtags=[hashtag]" target="_blank"><i class="fa-brands fa-square-twitter fa-xl""></i></a>
+                <a href="https://api.whatsapp.com/send?text=escola%20inform%C3%A1tica%20i%20disseny%20https://dinisiogarcia.com" target="_blank"><i class="fa-brands fa-square-whatsapp fa-xl""></i></a>
+                <a href="https://www.linkedin.com/sharing/share-offsite/?url=dionisiogarcia.com target=" _blank "><i class="fa-brands fa-linkedin fa-xl "></i></a>
                    
                 </div>
                     
