--- a/html/historia.html
+++ b/html/historia.html
@@ -16,9 +16,9 @@
 <body>
     <div class="contenedor">
         <header>
-
+            <p>fecha actual</p>
             <div class="menu">
-                <img class="portada_logo" src="/imagenes/logo.png " alt=" ">
+                <img class="portada_logo" src="/imagenes/logo.png " alt="foto logo" alt="logo Dionisio García">
         </header>
         <nav>
             <ul id="menu" class="menu">
@@ -40,7 +40,7 @@
 
                 </p>
                 <div>
-                    <img src="/imagenes/portadaB:N.png" alt="foto Tienda">
+                    <img src="/imagenes/portadaB:N.png" alt="foto Tienda" title="Foto Tienda">
                 </div>
 
 
