--- a/html/lavanderia.html
+++ b/html/lavanderia.html
@@ -16,9 +16,9 @@
 <body>
     <div class="contenedor">
         <header>
-
+            <p>fecha actual</p>
             <div class="menu">
-                <img class="portada_logo" src="/imagenes/logo.png " alt=" ">
+                <img class="portada_logo" src="/imagenes/logo.png " alt="foto logo" alt="logo Dionisio García">
         </header>
         <nav>
             <ul id="menu" class="menu">
