Videos insertados por fetch

--- a/html/consejos.html
+++ b/html/consejos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dionisio Gacía</title>
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <!-- enlace fontaweson -->
     <script src="https://kit.fontawesome.com/45730bc152.js" crossorigin="anonymous"></script>
@@ -31,63 +32,17 @@
             </ul>
         </nav>
 
-
-        <div class="container">
-
-            <div class="videos">
-                <div>
-                    <video src="/videos/01.-Cómo pintar sobre plástico.mp4" controls poster="/imagenes/poster_01.png"></video>
-                    <p>Pintura sobre plásticos</p>
-                </div>
-                <div> <video src="/videos/02.-Cómo restaurar un mueble HD.mp4" controls poster="/imagenes/poster-02.png"></video>
-                    <p>Renovar muebles viejos</p>
-                </div>
-                <div> <video src="/videos/03.-manchasPared.mp4" controls poster="/imagenes/poster_03.png"></video>
-                    <p>Eliminar manchas pared</p>
-                </div>
-                <div> <video src="/videos/04.-Cómo pintar con chalk paint o pintura a la tiza.mp4" controls poster="/imagenes/poster_04.jpg"></video>
-                    <p>Chalk paint "Pintura a la tiza"</p>
-                </div>
-                <div> <video src="/videos/05.-Cómo combatir la humedad por condensación.mp4" controls poster="/imagenes/poster_05.jpg"></video>
-                    <p>Humedad por condensación</p>
-                </div>
-                <div> <video src="/videos/06Cómo pintar sobre plástico II.mp4" controls poster="/imagenes/poster_06.jpg"></video>
-                    <p>Pintura sobre plásticos II</p>
-                </div>
-                <div> <video src="/videos/07.-Cómo reparar goteras y humedades en el techo HD.mp4" controls poster="/imagenes/poster_07.jpg"></video>
-                    <p>Reparar humedades techo</p>
-                </div>
-                <div> <video src="/videos/08.-Preparar las paredes para pintar HD.mp4" controls poster="/imagenes/poster_08.jpg"></video>
-                    <p>Preparación de paredess</p>
-                </div>
-                <div> <video src="/videos/09.-Cómo Quitar Sangre De Las Sábanas.mp4" controls poster="/imagenes/poster_09.png"></video>
-                    <p>Eliminar manchas sangre</p>
-                </div>
-                <div> <video src="/videos/10.-Dosivicacion Automatica.mp4" controls poster="/imagenes/poster_10.png"></video>
-                    <p>Sistema dosficación lavado automático</p>
-                </div>
-                <div> <video src="/videos/11-Dispack.mp4" controls poster="/imagenes/poster_11.png"></video>
-                    <p>Dispack concentrados</p>
-                </div>
-                <div> <video src="/videos/12.- Vorax D16.mp4" controls poster="/imagenes/poster-12.png"></video>
-                    <p> Desengrasante Vorax D16 Uso General</p>
-                </div>
-            </div>
+        <div id="videos" class="videos">
 
         </div>
 
 
-
-
-
-
-        </div>
 
 
         <footer>
 
             <div class="footer--flex_container">
-                <div class="datos">
+                <div id="videos" class="datos">
                     <p>Dionisio Garcia, SL</p>
                     <p>Calle AC/DC 69</p>
                     <p>28914 Leganes</p>
@@ -120,8 +75,9 @@
 
     </div>
 
-    <script src="/js/script.js "></script>
-    <script src="/js/enlaces.js "></script>
+   <!--  <script src="/js/script.js "></script> -->
+    <script src="/js/videos.js "></script>
+  
 
 </body>
 
