videos insertados por fetch

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dionisio Gacía</title>
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="../css/formulario.css">
     <!-- enlace fontaweson -->
@@ -36,7 +37,7 @@
             <DIV>
 
 
-                <p>Formulario de Contacto:</p>
+                <h3>Formulario de Contacto:</h3>
 
                 <p>Rellena el siguiente formulario para contactar con nosotros. Nos pondremos en contacto contigo lo antes posible. Gracias. </p>
                 <form id="form" class="form">
@@ -65,7 +66,7 @@
                             conforme con esta cláusula
                         </p>
                     </aside>
-                    <button type="submit" id="enviar_Form" class="enviar" disabled>Send</button>
+                    <button type="submit" id="enviar_Form" disabled>Send</button>
 
                 </form>
             </DIV>
@@ -117,7 +118,7 @@
     <script src="/js/script.js "></script>
     <script src="/js/formulario.js "></script>
     <script src="/js/validate.js "></script>
-
+  
 </body>
 
 </html>
