--- a/html/historia.html
+++ b/html/historia.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dionisio Gacía</title>
+    <link rel="stylesheet" href="../css/normalize.css">
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="stylesheet" href="../css/formulario.css">
     <!-- enlace fontaweson -->
@@ -101,9 +102,10 @@
 
         </div>
 
-        <script src="/js/script.js "></script>
+       
         <script src="/js/formulario.js "></script>
-        <script src="/js/enlaces.js "></script>
+        <script src="/js/script.js "></script>
+      
 
 </body>
 
